tests/NormalTests/paczka1/fuzzy1/94504188.err
Error in line 2: yvYMaDc7iJ4 S42 74,5
Error in line 5: yvYMaDc7iJ4 S383 74,4
Error in line 7: yvYMaDc7iJ4 S992 22,4
Error in line 9: 9N5hfzkr S383 22,5
Error in line 21: S383 S808 46,5
Error in line 37: k2fZf2zasv S42 40,13
Error in line 13: yvYMaDc7iJ4 S383 28,8
